--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,16 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+.toolbar-background {
+  background-color: #1998db;
+}
+.toolbar-title {
+  color: #ffffff;
+}
+.toolbar .segment-button {
+  color: #ffffff;
+}
+.segment-md .segment-button.activated, .segment-md .segment-button.segment-activated {
+  border-color: #ffffff;
+}
