--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,3 +1,20 @@
 page-login {
+  .logo img {
+    width: 100px;
+  }
 
+  .login-text p {
+    font-size: 17px;
+  }
+  .login-text {
+    padding: 26px 0;
+  }
+
+  .footer {
+    padding-top: 40px;
+    font-size: 13px;
+  }
+  .footer a {
+    color: #3247a1;
+  }
 }
