--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,11 +34,12 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
+  primary:    #1998db,
   secondary:  #32db64,
   danger:     #f53d3d,
-  light:      #f4f4f4,
-  dark:       #222
+  light:      #b8bcc3,
+  dark:       #222,
+  activated:  #3247a1
 );
 
 
