--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -38,3 +38,23 @@
   font-size: 20px;
   height: 5.6rem;
 }
+
+// Bottom transparent company logo
+.bottom-logo {
+  height: 5rem;
+  width: 100%;
+  background: rgba(255,255,255,0.9);
+  position: fixed;
+  bottom: 5.6rem;
+  z-index: 10;
+  text-align: center;
+}
+.bottom-logo img {
+  height: 3rem;
+  margin: 1rem 0;
+}
+
+// Add bottom padding to show content under the logo (need to add for all pages with this logo)
+page-home .scroll-content {
+  padding-bottom: 5rem;
+}
