--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -39,7 +39,8 @@ $colors: (
   danger:     #f53d3d,
   light:      #b8bcc3,
   dark:       #222,
-  activated:  #3247a1
+  activated:  #3247a1,
+  clear:      #fff
 );
 
 
