Transactions with period

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -47,15 +47,14 @@ $colors: (
 // App iOS Variables
 // --------------------------------------------------
 // iOS only Sass variables can go here
-
-
+$toolbar-ios-button-color: #fff;
+$toolbar-ios-title-text-align: 'center';
 
 
 // App Material Design Variables
 // --------------------------------------------------
 // Material Design only Sass variables can go here
-
-
+$toolbar-md-button-color: #fff;
 
 
 // App Windows Variables
