Transaction details page - finish UI

--- a/src/pages/transaction-details/transaction-details.scss
+++ b/src/pages/transaction-details/transaction-details.scss
@@ -73,5 +73,6 @@ page-transaction-details {
     letter-spacing: -0.4px;
     text-align: left;
     color: #414142;
+    text-transform: capitalize;
   }
 }
