--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -73,3 +73,10 @@ page-home .scroll-content, page-transactions .scroll-content, page-sort-by .scro
 .white-bg {
   background-color: #fff;
 }
+.subtitle {
+  font-size: 1.6rem;
+  line-height: 1.29;
+  letter-spacing: -0.4px;
+  text-align: center;
+  color: #ffffff;
+}
