--- a/src/pages/transaction-details/transaction-details.scss
+++ b/src/pages/transaction-details/transaction-details.scss
@@ -56,6 +56,9 @@ page-transaction-details {
     background-color: #fafafa;
     margin: 0;
   }
+  .list .item-content {
+    color: #c1c4cb;
+  }
   .divider {
     height: 30px;
     background-color: #fafafa;
