--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -35,12 +35,13 @@ $app-direction: ltr;
 
 $colors: (
   primary:    #1998db,
-  secondary:  #32db64,
+  secondary:  #35ce76,
   danger:     #f53d3d,
   light:      #b8bcc3,
   dark:       #222,
   activated:  #3247a1,
-  clear:      #fff
+  clear:      #fff,
+  filter:     #f7f8fc
 );
 
 
