--- a/src/pages/transactions/transactions.scss
+++ b/src/pages/transactions/transactions.scss
@@ -58,4 +58,23 @@ page-transactions {
     line-height: 1.18;
     letter-spacing: normal;
   }
+  ion-grid.grid {
+    ion-label.label.label-md {
+      padding-left: 29px;
+    }
+    div.item-inner {
+      box-shadow: none!important;
+      border-bottom-color: #dedede!important;
+    }
+    button.btn-cancel.item-button.button.button-md.button-clear.button-clear-md {
+        width: 53px;
+        height: 22px;
+        font-family: SFProText;
+        font-size: 17px;
+        line-height: 1.29;
+        letter-spacing: -0.4px;
+        text-transform: capitalize;
+        color: #1998db;
+    }
+  }
 }
