--- a/src/pages/report/report.scss
+++ b/src/pages/report/report.scss
@@ -23,4 +23,9 @@ page-report {
     text-align: left;
     color: #687381;
   }
+  .textarea-status {
+    font-size: 13px;
+    letter-spacing: -0.1px;
+    text-align: left;
+  }
 }
