--- a/src/pages/report/report.scss
+++ b/src/pages/report/report.scss
@@ -1,4 +1,7 @@
 page-report {
+  ion-header ion-navbar ion-title {
+    padding-right: 70px;
+  }
   .scroll-content {
     background-color: #fafafa;
   }
