--- a/src/pages/search/search.scss
+++ b/src/pages/search/search.scss
@@ -1,4 +1,8 @@
 page-search {
+  ion-header ion-row {
+    padding-left: 7px;
+    padding-right: 7px;
+  }
   .bottom-logo {
     bottom: 6rem;
   }
