--- a/src/pages/transaction-details/transaction-details.scss
+++ b/src/pages/transaction-details/transaction-details.scss
@@ -8,6 +8,9 @@ page-transaction-details {
     line-height: 1.29;
     letter-spacing: -0.4px;
   }
+  ion-header ion-navbar ion-title {
+    padding-right: 70px;
+  }
   .label {
     font-size: 11px;
     font-weight: 500;
