--- a/src/pages/transaction-details/transaction-details.scss
+++ b/src/pages/transaction-details/transaction-details.scss
@@ -11,6 +11,10 @@ page-transaction-details {
   ion-header ion-navbar ion-title {
     padding-right: 70px;
   }
+  -webkit-user-select: text;
+  -moz-user-select: text;
+  -ms-user-select: text;
+  user-select: text;
   .label {
     font-size: 11px;
     font-weight: 500;
