--- a/src/pages/earning/earning.scss
+++ b/src/pages/earning/earning.scss
@@ -38,6 +38,17 @@ earning-home {
   }
   // ion-list common
   ion-list {
+    .btn-currency {
+      color: #414141;;
+      padding: 0!important;
+      margin: 0;
+      width: auto;
+      height: 32px!important;
+      font-family: SFProText;
+      font-size: 17px!important;
+      line-height: 1.29;
+      letter-spacing: -0.4px;
+    }
     .img-logo {
       width: 124px;
       height: 22px;
