add QRcode, remove barcode, add ticketQRscannerPage

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -155,3 +155,7 @@ page-report .scroll-content, page-search .scroll-content, page-transactions .scr
     height: 20px;
   }
 }
+
+body.hidden-tabbar .tabbar{
+  display: none;
+}
