--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -159,3 +159,6 @@ page-report .scroll-content, page-search .scroll-content, page-transactions .scr
 body.hidden-tabbar .tabbar{
   display: none;
 }
+body.hidden-tabbar-when-scan .tabbar{
+  display: none;
+}
