--- a/src/pages/ticket/ticket-details/ticket-details.scss
+++ b/src/pages/ticket/ticket-details/ticket-details.scss
@@ -1,4 +1,7 @@
 page-ticket-details {
+  .fixed-content, .scroll-content {
+    margin-bottom: 56px;
+  }
   ion-content.content {
     background-color: #fafafa;
   }
