add fileTransfer pdf v.1

--- a/src/pages/ticket/ticket.scss
+++ b/src/pages/ticket/ticket.scss
@@ -9,7 +9,7 @@ page-ticket {
   }
   .btn-question {
     height: 48px;
-    margin-bottom: 43px;
+    margin-top: 65vh;
     background-color: #ffffff;
     border-color: #d1d1d6;
     font-family: SFProText;
