--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -52,6 +52,10 @@
   height: 5.6rem;
 }
 
+.back-button {
+  text-transform: capitalize!important;
+}
+
 // Bottom transparent company logo
 .bottom-logo {
   height: 5rem;
