fixed requests for productions

--- a/src/pages/settings/settings.scss
+++ b/src/pages/settings/settings.scss
@@ -8,15 +8,15 @@ page-settings {
           margin-left: 15px !important;
         }
         .icon-language {
-          content: url(/assets/img/ic-language.svg);
+          content: url(../assets/img/ic-language.svg);
           margin: 0 !important;
         }
         .icon-sound {
-          content: url(/assets/img/ic-sound.svg);
+          content: url(../assets/img/ic-sound.svg);
           margin: 0 !important;
         }
         .icon-notify {
-          content: url(/assets/img/ic-notify-on-sale.svg);
+          content: url(../assets/img/ic-notify-on-sale.svg);
           margin: 0 !important;
         }
         ion-label {
