--- a/src/pages/ticket/ticket-check/ticket-check.scss
+++ b/src/pages/ticket/ticket-check/ticket-check.scss
@@ -8,7 +8,7 @@ page-ticket-check {
         border-bottom: none!important;
         input {
           margin: 0;
-          padding: 17px;
+          padding: 17px 0 17px 17px;
           height: 56px;
           font-family: SFProText;
           font-size: 17px;
