--- a/src/pages/transactions/search/search.scss
+++ b/src/pages/transactions/search/search.scss
@@ -64,7 +64,7 @@ page-search {
       color: #3c50a6;
     }
     .err-message {
-      height: 30px;
+      height: auto;
       margin-bottom: 10px;
       border-radius: 2px;
       background-color: #FBD2D3;
