--- a/src/pages/transactions/search/search.scss
+++ b/src/pages/transactions/search/search.scss
@@ -102,7 +102,7 @@ page-search {
     box-shadow: inset 0 -1px 0 0 #3247a1;
     border-radius: 4px;
   }
-  .item-md.item-input.ng-invalid.ng-touched:not(.input-has-focus):not(.item-input-has-focus):not(.ng-pristine) .item-inner {
+  .item-md.item-input.ng-invalid.has-value.ng-touched:not(.input-has-focus):not(.item-input-has-focus):not(.ng-pristine) .item-inner {
     border: solid 1px #f53d3d;
     box-shadow: inset 0 -1px 0 0 #f53d3d;
     border-radius: 4px;
