added arrow to refresher & fixed ErrorService

--- a/src/pages/transactions/transactions.scss
+++ b/src/pages/transactions/transactions.scss
@@ -1,4 +1,7 @@
 page-transactions {
+  .scroll-content {
+    border-top: none!important;
+  }
   .period {
     color: #ffffff;
     background-color: color($colors, primary);
