fixed period header

--- a/src/pages/earning/earning.scss
+++ b/src/pages/earning/earning.scss
@@ -1,4 +1,7 @@
 earning-home {
+  .scroll-content {
+    border-top: none!important;
+  }
   .toolbar-md {
     padding: 4px 4px 0 4px;
     min-height: 44px;
