added font-size-active on the tabs

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -56,6 +56,7 @@ $toolbar-ios-title-text-align: 'center';
 // --------------------------------------------------
 // Material Design only Sass variables can go here
 $toolbar-md-button-color: #fff;
+$tabs-md-tab-font-size-active: 1.2rem;
 
 
 // App Windows Variables
