--- a/src/pages/earning/earning.scss
+++ b/src/pages/earning/earning.scss
@@ -32,7 +32,7 @@ earning-home {
       height: 28px;
       line-height: 1.38;
       letter-spacing: -0.1px;
-      padding: 4px 5px 6px 5px;
+      padding: 5px;
     }
     ion-segment-button.segment-button.segment-activated {
       border: none;
@@ -43,7 +43,7 @@ earning-home {
   ion-list {
     .btn-currency {
       color: #414141;;
-      padding: 0!important;
+      padding: 0 16px!important;
       margin: 0;
       width: auto;
       height: 32px!important;
