added highlightFields to params, added ellipsis to long words

--- a/src/pages/ticket/ticket.scss
+++ b/src/pages/ticket/ticket.scss
@@ -4,6 +4,18 @@ page-ticket {
     .scroll-content {
       border-top: none!important;
     }
+    ion-list {
+      .empty-param {
+        background-color: #FBD2D3;
+      }
+      .item-content {
+        width: 50vw;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        text-align: end;
+      }
+    }
   }
   ion-icon {
     top: 1px;
