--- a/src/pages/transactions/search/search.scss
+++ b/src/pages/transactions/search/search.scss
@@ -140,6 +140,10 @@ page-search {
     color: #c1c4cb;
     letter-spacing: -0.4px;
   }
+  .button-md.activated {
+    background-color: #f7f8fc;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+  }
   .horizontal-list {
     padding: 10px !important;
   }
