--- a/src/pages/transactions/search/search.scss
+++ b/src/pages/transactions/search/search.scss
@@ -123,11 +123,16 @@ page-search {
   }
   .list-md .item-input.ng-invalid.ng-touched.input-has-focus.item-input-has-focus:last-child {
     border-bottom: solid 1px #3247a1;
-    box-shadow: none;
+    box-shadow: inset 0 -1px 0 0 #3247a1;
   }
   .list-md .item-input.item-input-has-focus:last-child, .list-md .item-input.item-has-focus:last-child {
     border-bottom: solid 1px #3247a1;
-    box-shadow: none;
+    box-shadow: inset 0 -1px 0 0 #3247a1;
+  }
+
+  .searchbar.searchbar-has-focus input.searchbar-input {
+    border: solid 1px #3247a1;
+    border-radius: 4px;
   }
 
   .button-block {
@@ -156,5 +161,11 @@ page-search {
     letter-spacing: -0.4px;
     text-align: left;
     color: #414142;
+  }
+  #transparentDiv {
+    position: absolute;
+    height: 100px;
+    width: 100%;
+    z-index: 9;
   }
 }
