--- a/src/pages/transactions/search/search.scss
+++ b/src/pages/transactions/search/search.scss
@@ -3,6 +3,9 @@ page-search {
     padding-left: 7px;
     padding-right: 7px;
   }
+  .toogle {
+    margin: 10px auto 10px!important;
+  }
   .bottom-logo {
     bottom: 6rem;
   }
