--- a/src/pages/ticket/ticket-check/ticket-check.scss
+++ b/src/pages/ticket/ticket-check/ticket-check.scss
@@ -37,6 +37,12 @@ page-ticket-check {
         letter-spacing: -0.3px;
         text-align: center;
       }
+      #description {
+        font-size: 13px;
+        letter-spacing: -0.1px;
+        text-align: left;
+        color: #687381;
+      }
     }
     ion-list {
       padding: 0 29px;
