--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -57,7 +57,9 @@ $toolbar-ios-title-text-align: 'center';
 // Material Design only Sass variables can go here
 $toolbar-md-button-color: #fff;
 $tabs-md-tab-font-size-active: 1.2rem;
-
+$tabs-md-tab-icon-transform-y-active: 0;
+$alert-md-button-group-padding-start: 8;
+$alert-md-button-group-justify-content: space-between;
 
 // App Windows Variables
 // --------------------------------------------------
