Max date changes and padding remove

--- a/src/pages/transactions/transactions.scss
+++ b/src/pages/transactions/transactions.scss
@@ -109,6 +109,9 @@ page-transactions {
   .no-capitalize {
     text-transform: none !important;
   }
+  .no-padding {
+    padding: 0!important;
+  }
   .badge {
     font-size: 1rem;
   }
