Minor text updates, remove phone number, check numeric field

--- a/src/pages/earning/earning.scss
+++ b/src/pages/earning/earning.scss
@@ -52,7 +52,7 @@ earning-home {
       }
       ion-label.label.label-md.amount {
         height: 41px;
-        font-family: SFProDisplay;
+        font-family: SFProText;
         text-align: center!important;
         font-size: 34px;
         font-weight: bold;
