Minor visual updates

--- a/src/pages/settings/account/account.scss
+++ b/src/pages/settings/account/account.scss
@@ -59,7 +59,7 @@ page-account {
         width: 74px;
       }
       span.new-account {
-        font-family: SFUIText;
+        //font-family: SFUIText;
         font-size: 17px;
         letter-spacing: -0.4px;
         text-align: left;
