--- a/src/pages/transactions/transaction-details/transaction-details.scss
+++ b/src/pages/transactions/transaction-details/transaction-details.scss
@@ -29,7 +29,10 @@ page-transaction-details {
     border-top: 1px solid #d1d1d6;
     border-bottom: 1px solid #d1d1d6;
   }
-  .bordered ion-col:first-of-type {
+  .bordered .border-bottom {
+    border-bottom: 1px solid #d1d1d6;
+  }
+  .bordered .border-right {
     border-right: 1px solid #d1d1d6;
   }
   .bordered ion-col {
